# substreams-spl-token

./: .env.example  .gitignore  .sfreleaser  CHANGELOG.md  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  example-queries.md  rust-toolchain.toml  setup-database.sh  substreams.yaml  views.sql
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/spl-token/: dbt_all_burns.sql  dbt_all_mints.sql  dbt_burn_per_month.sql  dbt_mint_per_month.sql  dbt_total_supply.sql  schema.yml
devel/: setup-database.sh
proto/schema/: schema.proto
proto/sf/solana/v1/spl/type/: spl.proto
src/: constants.rs  lib.rs
src/pb/: .last_generated_hash  mod.rs  schema.rs  sf.firehose.v2.rs  sf.solana.spl.foundational.v1.rs  sf.solana.spl.v1.type.rs  sf.solana.transforms.v1.rs  sf.substreams.foundational_store.v1.rs  sf.substreams.internal.v2.rs  sf.substreams.sink.sql.v1.rs  sf.substreams.solana.spl.v1.rs  sf.substreams.solana.type.v1.rs  sf.substreams.v1.rs  test.relations.rs
