[package]
name = "substreams-spl-token"
version = "0.1.2"
description = "Substreams for SPL Token (Analytics, Transfers, Balances)"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "substreams"

[dependencies]
bs58 = "0.4.0"
prost = "0.11"
prost-types = "0.11"
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "release/0.13.0" }
substreams-solana-program-instructions = "0.1"
thiserror = "1.0.25"
anyhow = "1.0.72"
log = "0.4.22"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"
