[package]
name = "substreams-spl-token"
version = "0.1.2"
description = "Substreams for SPL Token (Analytics, Transfers, Balances)"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "substreams"

[dependencies]
bs58 = "0.4.0"
prost = "0.13.3"
prost-types = "0.13.3"
substreams = "0.6.0"
substreams-solana = "0.14.1"
substreams-solana-program-instructions = "0.2.0"
thiserror = "1.0.25"
anyhow = "1.0.72"
log = "0.4.22"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"
